--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <!-- key google-->
    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHqF3aAxF5bb-BbrXhw8bkoMKljTriRp4&callback=initMap" type="text/javascript"></script>
   <!--/Materialize CDN-->
   <!-- Compiled and minified CSS -->
